
- In den Benutzreinstellungen kann ausgewählt werden, ob der Part-Picker in
  der neuen Angebots-/Auftragsmaske (neuer Auftrags-Controller) auch nach
  Kunden-Artikelnummern (Verkauf) und Lieferanten-Artikelnummern (Einkauf)
  suchen soll. Ist dieses Feature eingeschaltet, so werden auch die Kunden-
  bzw. Lieferanten-Artikelnummern als Spalte in den Positionen angezeigt.


2019-08-07 - Release 3.5.4


Mittelgroße neue Features:

- Anzeigename (Picker-Ergenisse) konfigurierbar gemacht
  Im Moment können Kunden-, Lieferanten und Waren-Anzeige konfiguriert werden.
  Dies kann mandantenweit in der Mandantenkonfiguration passieren und vom
  Benutzer in den Benutzereinstellungen überschrieben werden.
  Konfiguriert wird intern "displayable_name". Es kann sein, dass dieser auch
  an anderen Stellen außer Picker-Ergebnissen verwendet wird.

Kleinere neue Features und Detailverbesserungen:

- Memory-Limits für FCGI-Prozesse werden nun auch vom Task-Server berücksichtigt.
  Zu beachten ist, dass für einen Neustart des Task-Servers gesorgt werden muss.
  Ist der Task-Server als systemd-Service eingerichtet, geschieht dies automatisch.
- Bearbeiter der Mahnungen konfigurierbar gemacht (#345)
  Entsprechend wird beim Mahnungen erzeugen auch der E-Mail-Absender inkl. Signatur gesetzt
- Kundenstammdaten um Feld Herkunft personenbezogener Daten erweitert
  Entsprechend der DSGVO kann hier der Erstkontakt mit dem Kunden protokolliert werden (Messe, etc)
  Das Feld wird beim Bericht mitexportiert
- Kundenstammdaten um Feld E-Mail Rechnungsempfänger erweitert
  Viele Kunden besitzen für den Rechnungseingang eine generische E-Mail-Adresse, die nicht
  mit der allgemeine E-Mail-Adresse identisch ist. Falls dieses Feld gesetzt ist, so hat dieser
  Wert beim manuellen E-Mail Versand der Rechnung Priorität (mandantenweit konfigurierbar).
  Für die wiederkehrende Rechnung wird diese E-Mail-Adresse zusätzlich gesetzt.