@@ -12,6 +12,7 @@ Mittelgroße neue Features:
   suchen soll. Ist dieses Feature eingeschaltet, so werden auch die Kunden-
   bzw. Lieferanten-Artikelnummern als Spalte in den Positionen angezeigt.
 
+- Part Controller - neuer Tab mit Lagerinformationen - was ist wo gelagert
 
 2019-08-07 - Release 3.5.4
 
